Fix Xray healthcheck and improve installation script
- Change Xray healthcheck to be more lenient
- Remove strict health dependency for backend
- Add better error handling in install script
- Show Xray logs if container is unhealthy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,11 +70,11 @@ services:
     restart: unless-stopped
     command: ["xray", "-config", "/etc/xray/config.json"]
     healthcheck:
-      test: ["CMD", "xray", "version"]
+      test: ["CMD-SHELL", "xray version || exit 1"]
       interval: 30s
       timeout: 10s
-      retries: 3
-      start_period: 40s
+      retries: 5
+      start_period: 60s
 
 volumes:
   backend_data:
