Fix Xray config: Replace geosite:ir with regex pattern for .ir domains

--- a/xray/config.json.template
+++ b/xray/config.json.template
@@ -123,7 +123,7 @@
       {
         "type": "field",
         "domain": [
-          "geosite:ir"
+          "regexp:^.*\\.ir$"
         ],
         "outboundTag": "direct"
       },
